@@ -1,5 +1,5 @@
 PROJECT (gdsto3d)
-SET (VERSION 20070601)
+SET (VERSION 20070813)
 
 ADD_DEFINITIONS (-DVERSION=\\\"${VERSION}\\\" -DHAVE_CONFIG_H)
 INCLUDE_DIRECTORIES (${gdsto3d_BINARY_DIR})
@@ -9,10 +9,23 @@ INCLUDE (FindOpenGL)
 
 FIND_LIBRARY (WINSOCK2_LIBRARY "ws2_32")
 CHECK_INCLUDE_FILE ("stdint.h" HAVE_STDINT_H)
-CHECK_INCLUDE_FILE ("winsock2.h" HAVE_WINSOCK2_H)
-CHECK_INCLUDE_FILE ("windows.h" HAVE_WINDOWS_H)
+CHECK_INCLUDE_FILE ("stdarg.h" HAVE_STDARG_H)
+CHECK_INCLUDE_FILE ("sys/time.h" HAVE_SYS_TIME_H)
+CHECK_INCLUDE_FILE ("time.h" HAVE_TIME_H)
+
 CHECK_INCLUDE_FILE ("GL/gl.h" HAVE_GL_GL_H)
 CHECK_INCLUDE_FILE ("GL/glu.h" HAVE_GL_GLU_H)
+CHECK_INCLUDE_FILE ("GL/glx.h" HAVE_GL_GLX_H)
+
+CHECK_INCLUDE_FILE ("X11/keysym.h" HAVE_X11_KEYSYM_H)
+CHECK_INCLUDE_FILE ("X11/Xlib.h" HAVE_X11_XLIB_H)
+
+CHECK_INCLUDE_FILE ("winsock2.h" HAVE_WINSOCK2_H)
+CHECK_INCLUDE_FILE ("windows.h" HAVE_WINDOWS_H)
+
+CHECK_FUNCTION_EXISTS ("gettimeofday" HAVE_GETTIMEOFDAY)
+CHECK_FUNCTION_EXISTS ("QueryPerformanceCounter" HAVE_QUERYPERFORMANCECOUNTER)
+
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 # Install destinations
