@@ -1,0 +1,2 @@
+all :
+	@echo "To compile, install cmake, cd to build and run 'cmake ..' followed by 'make' and 'make install' as usual."
