@@ -16,3 +16,6 @@ IF (WINSOCK2_LIBRARY)
 ENDIF (WINSOCK2_LIBRARY)
 
 INSTALL (TARGETS gdsto3d RUNTIME DESTINATION ${BINDEST} LIBRARY DESTINATION ${LIBDEST})
+IF (UNIX)
+	INSTALL(CODE "EXEC_PROGRAM(/sbin/ldconfig)")
+ENDIF (UNIX)
